:sparkles: feat: fetcher all events
