# docs/swagger.json
@@ -8,6 +8,46 @@
     },
     "host": "localhost:8989",
     "paths": {
+        "/queryAllEventByBlockRange": {
+            "post": {
+                "description": "queries all event by block range",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "flow-event-fetcher"
+                ],
+                "summary": "queries all event by block range",
+                "parameters": [
+                    {
+                        "description": "data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.QueryAllEventByBlockRangeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/v1.BlockEventsResponseEvent"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
         "/queryEventByBlockRange": {
             "post": {
                 "description": "queries event by block range",
@@ -35,7 +75,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/v1.QueryEventByBlockRangeResponseEvent"
+                                "$ref": "#/definitions/v1.BlockEventsResponseEvent"
                             }
                         }
                     },
@@ -143,21 +183,7 @@
                 }
             }
         },
-        "v1.QueryEventByBlockRangeRequest": {
-            "type": "object",
-            "properties": {
-                "end": {
-                    "type": "integer"
-                },
-                "event": {
-                    "type": "string"
-                },
-                "start": {
-                    "type": "integer"
-                }
-            }
-        },
-        "v1.QueryEventByBlockRangeResponseEvent": {
+        "v1.BlockEventsResponseEvent": {
             "type": "object",
             "properties": {
                 "blockId": {
@@ -184,12 +210,12 @@
                 "values": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/v1.QueryEventByBlockRangeResponseValue"
+                        "$ref": "#/definitions/v1.BlockEventsResponseValue"
                     }
                 }
             }
         },
-        "v1.QueryEventByBlockRangeResponseValue": {
+        "v1.BlockEventsResponseValue": {
             "type": "object",
             "properties": {
                 "name": {
@@ -197,6 +223,31 @@
                 },
                 "value": {
                     "type": "string"
+                }
+            }
+        },
+        "v1.QueryAllEventByBlockRangeRequest": {
+            "type": "object",
+            "properties": {
+                "end": {
+                    "type": "integer"
+                },
+                "start": {
+                    "type": "integer"
+                }
+            }
+        },
+        "v1.QueryEventByBlockRangeRequest": {
+            "type": "object",
+            "properties": {
+                "end": {
+                    "type": "integer"
+                },
+                "event": {
+                    "type": "string"
+                },
+                "start": {
+                    "type": "integer"
                 }
             }
         },
